# webfuse

./: .cproject  .env  .gitignore  .project  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  SECURITY.md  changelog.md  cmake.mk  codecov.yml  create_coverage.sh  docker-bake.hcl  flake.nix  helgrind.supp  install_deps.sh  meson.build  meson_options.txt  run-clang-tidy.sh  run_tests
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  generic-issue-template.md
.github/workflows/: build.yml  codeql.yml
assets/adapters/cmake/: cmake_helper.sh  delegate  package-install
assets/adapters/gradle/: assemble  check  delegate
assets/templates/: md5sum.txt.template
cmake/: coverage.cmake  jsonrpc.cmake  unit_tests.cmake  webfuse_adapter.cmake  webfuse_core.cmake  webfuse_provider.cmake  wf_jsonrpc.cmake  wf_timer.cmake
doc/: README.md  api.md  authenticate.uml  authentication.md  build.md  concept.uml  filesystem.uml  protocol.md  webfuse.md  webfuse_provider.md
docker/: amd64-ubuntu-builder.dockerfile  arm32v7-ubuntu-builder.dockerfile  wsfs-builder-amd64-ubuntu.dockerfile  wsfs-builder-arm32v7-ubuntu.dockerfile
example/: main.c
example/authenticator/pam/: CMakeLists.txt  README.md
example/authenticator/pam/etc/pam.d/: webfuse
example/authenticator/pam/src/: main.cpp  token_decode.cpp  token_encode.cpp
example/authenticator/simple/: authenticator.sh
example/daemon/: main.c
example/daemon/www/: index.html
example/passwd/: main.c
example/provider/: main.c  static_filesystem.c
example/provider/javascript/: README.md  index.html  style.css
example/provider/python/: pylintrc  webfuse_provider.py
example/www/js/: connection.js  connection_view.js  filesystem.js  filesystem_handler.js
examples/cmake-gtest-example/: Makefile  test_stringcompare.cpp
inc/: wsfs.h
inc/wsfs/: api.h
include/: webfuse_adapter.h  webfuse_provider.h  wsfs.h  wsfs_adapter.h  wsfs_provider.h
include/jsonrpc/: api.h  method.h  proxy.h  request.h  response.h  send_fn.h  server.h  status.h
include/webfuse/: api.h  authenticate.h  client.h  client_callback.h  client_tlsconfig.h  credentials.h  mountpoint.h  mountpoint_factory.h  protocol_names.h  server.h  server_config.h  server_protocol.h  status.h  webfuse.h
include/webfuse/adapter/: api.h  authenticate.h  client.h  client_callback.h  client_credentials.h  client_tlsconfig.h  credentials.h  mountpoint.h  mountpoint_factory.h  server.h  server_config.h  server_protocol.h
include/webfuse/core/: protocol_names.h  status.h
include/wsfs/: api.h  server.h  server_config.h  server_protocol.h  status.h
include/wsfsp/: api.h  client.h  client_protocol.h  dirbuffer.h  provider.h
lib/jsonrpc/: error.c  error.h  method.c  proxy.c  request.c  response.c  server.c
lib/jsonrpc/impl/: error.c  (+4 more)
lib/webfuse/: api.c
lib/wsfs/: filesystem.h  fuse_wrapper.h  message.c  message.h  message_queue.c  operations.h  server.c  server_protocol_intern.h  status.c  status.h  status_intern.h  util.h
lib/wsfsp/: client.c  client_protocol.c  client_protocol_intern.h  provider.c  provider_default.c  provider_default.h  provider_intern.h  request.c  request.h  url.c  url.h
script/: create_cert.sh  provider.py
src/: main.c  main.cpp  provider_main.cpp
src/app/: main.c
src/webfuse/: filesystem.cpp  filesystem.hpp  fuse.cpp  fuse.hpp  message_type.hpp  provider.cpp  provider.hpp  request_type.cpp  request_type.hpp  response_type.cpp  response_type.hpp  version.cpp.in  version.hpp  webfuse.cpp  webfuse.hpp
src/wsfs/: filesystem.c  filesystem.h  fuse_wrapper.h  jsonrpc.c  jsonrpc.h  message_queue.h  operations.c  operations.h  protocol.c  protocol.h  response_parser.c  response_parser.h  server.c  server.h  server_config.c  server_protocol.c  server_protocol_intern.h  status.c  status.h  util.h
subprojects/: fuse3.wrap  gtest.wrap  jansson.wrap  libwebsockets.wrap
test/: die_if.cc  fake_adapter_server.cc  fake_adapter_server.hpp  file_utils.cc  json_matcher.hpp  mock_authenticator.cc  mock_authenticator.hpp  mock_request.cc  mock_request.hpp  msleep.cc  msleep.hpp  tempdir.cc  tempdir.hpp  test_authenticator.cc  test_authenticators.cc  test_container_of.cc  test_credentials.cc  test_dlist.cc  test_fuse_req.cc  test_path.cc  test_response_parser.cc  test_server.cc  test_slist.cc  test_static_filesystem.cc  test_timepoint.cc  test_timer.cc  test_url.cc  timeout_watcher.cc  timeout_watcher.hpp
test-src/: test_main.c  test_response_parser.c  test_response_parser.cc  test_server.cc  test_timepoint.cc  test_timer.cc  test_util.c  test_util.h
test-src/integration/: test_access.cpp  test_chmod.cpp  test_chown.cpp  test_fsync.cpp  test_link.cpp  test_mkdir.cpp  test_mknod.cpp  test_open.cpp  test_read.cpp  test_readdir.cpp  test_readlink.cpp  test_rename.cpp  test_rmdir.cpp  test_statfs.cpp  test_symlink.cpp  test_truncate.cpp  test_unlink.cpp  test_utimens.cpp  test_write.cpp
test-src/webfuse/: test_access.cpp  test_app.cpp  test_request_type.cpp  test_response_type.cpp
test/adapter/: test_authenticator.cc  test_authenticators.cc  test_credentials.cc  test_fuse_req.cc  test_mountpoint.cc  test_response_parser.cc  test_server_config.cc  test_timepoint.cc  test_timer.cc  test_uuid_mountpoint.cc  test_uuid_mountpoint_factory.cc
test/core/: test_message.cc  test_message_queue.cc  test_status.cc
test/integration/: provider.cc  provider.hpp  server.cc  server.hpp  test_integration.cc
test/jsonrpc/: test_is_request.cc  test_proxy.cc  test_request.cc  test_response.cc  test_server.cc
test/provider/: test_client_protocol.cc  test_url.cc
test/webfuse/: test_app.cpp  test_authenticator.cc  test_authenticators.cc  test_client.cc  test_client_tlsconfig.cc  test_credentials.cc  test_message.cc  test_message_queue.cc  test_mountpoint.cc  test_server.cc  test_server_config.cc  test_server_protocol.cc  test_status.cc
tests/: 31_get_container_id.bats  40_parse_target_properties.bats  41_dobuild_opts.bats
tests/runners/: dind-volumes_from.yml  dind.dockerfile
(+852 files in other folders)
